<resources>
    <string name="label">Мой проект</string>
    <string name="maintext">Перед тобой три кнопки. Только одна из них приведет тебя к успеху. P.S. Не советую промахиваться) И помни, назад пути нет!</string>
    <string name="toastCheating">Хех, ну ты, хитрец, вряд ли кто то до этого догадался до тебя, поэтому скажу по секрету, нижимай на кнопку 3! Только тсс!</string>
    <string name="GoodJob">Красава)</string>
    <string name="Button">Нажми сюда!</string>
    <string name="task2">Поздравляю, первое задание пройдено! Извини, но чтобы пройти дальше, тебе придется услышать самую смешную шутку IN THE WORLD!          P.S. Если выдержишь, дослушай до конца (там еще песенка будет). Удачи!</string>
    <string name="advice">Тебе нужно перетащить ползунок вправо</string>
    <string name="gonext">Ааа! Мои уши! Хватит!</string>
    <string name="task3">Итак, следующее задание: Тебе нужно ответить на три вопроса, чтобы перейти на следующий уровень! </string>
    <string name="quest2">Сколько раз цифра 3 используется в записи двузначных чисел?</string>
    <string name="quest1">Романтическое место в компьютере, где может причалить усталое и потрепанное бурями периферийное устройство?</string>
    <string name="quest3">До каких пор волк в лес бежит?</string>
    <string name="gonext2">Я крут, поехали дальше</string>
    <string name="helpTooHard">Сложна, сложна, ничего не понятно!</string>
    <string name="toastHelp1">Очевидно же - порт</string>
    <string name="toastHelp2">Можно было и посчитать... 19</string>
    <string name="toastHelp3">до середины. Потом он бежит из леса ;-)</string>
    <string name="toastHelp">Я знал, что ты нажмешь сюда) Чтобы увидеть ответ нажми на текст вопроса и удержи)</string>
    <string name="check">Проверить</string>
    <string name="toastEmpty">Ну как же ты нажимаешь проверить, если еще не все ответи написаны?</string>
    <string name="neverBack">К сожалению назад вернуться уже нельзя, если приложение закроется, весь процесс будет потерян</string>
    <string name="Task4">И снова перед тобой рандом) Перед тобой 4 кнопки, каждая из них устанавливает громкость на разный уровень, будь осторожен, следующий шаг может быть слишком громким! Удачи ;-) P.S. качелькой изменять нельзя)</string>
    <string name="restart">Перезапуск квеста</string>
    <string name="finish">Выход</string>


</resources>
